# Cairn

./: .gitignore  INSTRUCTIONS.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
cairn/: __init__.py  claude_md.py  cli.py  client.py  init.py  scanner.py  server.py
cairn/schemas/: cairn_v1.json
cairn/schemas/projects/: lumina.json  nyx-audio.json
capsules/: CAP-001.json  registry.json
schemas/: cairn_v1.json
schemas/projects/: coda.json  terra-siege.json
snapshots/: cairn_20260417_221142_710132.json  index.json
specs/: rehydration.md
src/: cairn_client.py  cairn_server.py  claude_md.py
tests/: conftest.py  test_claude_md.py  test_client.py  test_handover.py  test_init.py  test_project_extensions.py  test_scanner.py  test_server.py
tests/fixtures/: _generate.py  chaos_critical_rsk.json  diff_baseline.json  diff_phase_change.json
tools/: cairn_init.py  cairn_scanner.py
